# NeuralResonatorVST

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yaml
.gitsecret/keys/: pubring.kbx  trustdb.gpg
.gitsecret/paths/: mapping.cfg
NeuralResonatorVST/: BrowserComponent.cpp  BrowserComponent.h  CMakeLists.txt  ConsoleLogger.h  DragableVertex.cpp  DragableVertex.h  FallbackUI.cpp  FallbackUI.h  Filterbank.cpp  Filterbank.h  HelperFunctions.h  Lerp.h  ParallelLerp.h  ParameterSyncer.cpp  ParameterSyncer.h  ParameterSyncerIf.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorIf.h  QueueThread.h  RemoteParameterAttachment.h  ServerThread.cpp  ServerThread.h  ServerThreadIf.h  TorchWrapper.cpp  TorchWrapper.h  TorchWrapperIf.h  TwoPole.h  TwoPoleInterpolated.h  TwoPoleInterpolator.h  generate_polygon.hpp  twoPole.h  types.hpp
NeuralResonatorVST/simple_ws_server/: base64.hpp  server_ws.hpp  sha1.hpp
NeuralResonatorVST/test/: CMakeLists.txt  ConsolePlugin.cpp  ConsolePlugin.h
cmake/: TorchUtils.cmake
python/: pulse.ipynb
ui/: .eslintrc.cjs  .prettierignore  .prettierrc  index.html  package-lock.json  package.json  readme.md  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
ui/public/: manifest.json
ui/src/: App.js  index.css  index.jsx  index.tsx  types.d.ts
ui/src/components/: App.jsx  App.tsx  JuceIntegration.tsx  Mesh.js  Mesh.jsx  Mesh.tsx  Nodes.jsx  Panel.js  Panel.tsx  State.js  drum.tsx  generatePolygon.ts  juce-integration.tsx  juceCommunication.ts  juceIntegration.tsx  leva-panel.tsx  mesh.tsx  mutable-point.tsx  mutable_point.tsx  panel.ts  panel.tsx  polygon.tsx  vectorUtils.ts
ui/src/components/juce-integration/: components.tsx  index.ts  types.d.ts
ui/src/components/juce-integration/messages/: callbackEventTypes.ts
ui/src/components/juce-integration/models/: ParameterModel.ts  ParametersModel.ts  parameters.ts
ui/src/components/juce-integration/valueTree/: InputStream.ts  ValueTree.ts  ValueTreeSynchroniser.ts  mobxHelpers.ts
ui/src/components/messages/: callbackEventTypes.ts  pluginMessages.ts
ui/src/components/models/: ParameterModel.ts  ParametersModel.ts  parameters.ts
ui/src/components/valueTree/: InputStream.test.ts  InputStream.ts  ValueTree.test.ts  ValueTree.ts  ValueTreeSynchroniser.test.ts  ValueTreeSynchroniser.ts  mobxHelpers.ts
ui/src/css/: index.css
ui/src/scss/: App.scss  drum.scss  polygon.scss
ui/src/test/: App.test.js
unused/: InputStream.test.ts  Mesh.jsx  Nodes.jsx  ValueTree.test.ts  ValueTreeSynchroniser.test.ts  generatePolygon.ts
